# rust-agentai

./: Cargo.toml
examples/: struct_output.rs
src/: agent.rs
src/tool/: closure.rs  mod.rs
